--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
     "html-react-parser": "^5.2.5",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.1",
     "react-scroll": "^1.9.3",
     "swiper": "^11.2.8"
