--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.1",
     "react-scroll": "^1.9.3",
+    "react-select": "^5.10.1",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
